# rust-arduino-car-model

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/application/: cli.rs
src/domain/model/: car_data_record.rs  mod.rs
src/domain/ports/: incoming.rs  mod.rs  outgoing.rs
src/domain/services/: data_converter.rs  mod.rs
src/infrastructure/: file_binary_reader.rs  mod.rs
