[package]
name = "rust_car_model"
version = "0.1.0"
authors = ["ivan.fontanals@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.24"
anyhow = "1.0.40"
dotenv = "0.15.0"
lazy_static = "1.4.0"
async-trait = "0.1.50"

futures = "0.3.14"
schemars = "0.8.6"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
either = "1.6.1"
clap = { version = "3.0.13", features = ["derive"] }

[dev-dependencies]
mock-it = "0.3.0"

